# infraestrutura-cassandra-pd

./: Makefile  README.md  docker-compose.yml  pyproject.toml
data/: README.md
infra_cassandra/: etl.py
jupyter/: analises_covid.ipynb
jupyter/.ivy2/cache/com.datastax.oss/java-driver-shaded-guava/: ivy-25.1-jre-graal-sub-1.xml  ivydata-25.1-jre-graal-sub-1.properties
jupyter/.ivy2/cache/com.datastax.oss/native-protocol/: ivy-1.5.1.xml  ivydata-1.5.1.properties
jupyter/.ivy2/cache/com.datastax.spark/spark-cassandra-connector-driver_2.12/: ivy-3.5.1.xml  ivy-3.5.1.xml.original  ivydata-3.5.1.properties
jupyter/.ivy2/cache/com.datastax.spark/spark-cassandra-connector_2.12/: ivy-3.5.1.xml  ivy-3.5.1.xml.original  ivydata-3.5.1.properties
jupyter/.ivy2/cache/com.thoughtworks.paranamer/paranamer/: ivy-2.8.xml  ivydata-2.8.properties
jupyter/.ivy2/cache/com.thoughtworks.paranamer/paranamer-parent/: ivy-2.8.xml  ivydata-2.8.properties
jupyter/.ivy2/cache/com.typesafe/config/: ivy-1.4.1.xml  ivydata-1.4.1.properties
jupyter/.ivy2/cache/io.dropwizard.metrics/metrics-core/: ivy-4.1.18.xml  (+1 more)
jupyter/.jupyter/lab/workspaces/: default-37a8.jupyterlab-workspace
jupyter/.local/share/jupyter/: nbsignatures.db  notebook_secret
jupyter/spark-3.5.1-bin-hadoop3/.jupyter/: migrated
raw_data/dados_abertos/: Consolidado por município 26.06.2023_15h.csv
raw_data/ipea/: ipeadata[02-11-2024-04-08] - homens 40 49.csv  ipeadata[02-11-2024-04-08] - mulheres 40 49.csv  ipeadata[02-11-2024-04-09] - homens 50 59.csv  ipeadata[02-11-2024-04-10] - mulheres 50 59.csv
(+37 files in other folders)
